--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,5 +14,6 @@ Code from Displaying Foods Exercise
       border-style: solid;
       border-color: red;
       padding: 2%;
+      width: 20%;
       
   }
